@@ -13,6 +13,7 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.context.annotation.Bean;
 import org.springframework.stereotype.Component;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collectors;
@@ -55,16 +56,19 @@ public class GradingSettingUtil {
     }
 
     public static Optional<GradingSettingResponse> mapGradeSetting_ToGradeSettingResponse(GradingSetting gradingSetting) {
-        return Optional.ofNullable(GradingSettingResponse.builder()
-                .id(gradingSetting.getIdGradingSetting())
-                .examsPercentage(gradingSetting.getExamsPercentage())
-                .allowedTrails(gradingSetting.getAllowedTrails())
-                .classPercentage(gradingSetting.getClassPercentage())
-                .trailingMark(gradingSetting.getTrailingMark())
-                .gradingList((List<GradingResponse>) gradingSetting.getGradingList().stream().map(gL -> {
-                    return mapGradeList_ToGradeListResponse(gL);
-                }).toList())
-                .build());
+        return Optional.ofNullable(gradingSetting)
+                .map(gs -> GradingSettingResponse.builder()
+                        .id(gs.getIdGradingSetting())
+                        .examsPercentage(gs.getExamsPercentage())
+                        .allowedTrails(gs.getAllowedTrails())
+                        .classPercentage(gs.getClassPercentage())
+                        .trailingMark(gs.getTrailingMark())
+                        .gradingList(Optional.ofNullable(gs.getGradingList()) // Handle null gradingList
+                                .map(list -> list.stream()
+                                        .map(gL -> mapGradeList_ToGradeListResponse(gL)) // Map each item in gradingList
+                                        .collect(Collectors.toList()))
+                                .orElse(Collections.emptyList())) // Empty list if gradingList is null
+                        .build());
     }
 
     private static GradingResponse mapGradeList_ToGradeListResponse(Grading gL) {
